--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,8 +4,8 @@ compatibility_date = "2022-03-26"
 main = "src/index.ts"
 
 [vars]
-GITHUB_ACCOUNT = 'killeencode'
-GITHUB_REPO = 'brancato'
+GITHUB_ACCOUNT = 'spacemeowx2'
+GITHUB_REPO = 's3si.ts'
 GITHUB_TOKEN = '' # Optional - used with private repos
 
 [build]
