--- a/package.json
+++ b/package.json
@@ -20,26 +20,26 @@
     ]
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.0.0",
-    "@types/jest": "^26.0.23",
-    "@types/semver": "^7.3.9",
+    "@cloudflare/workers-types": "^4.20230404.0",
+    "@types/jest": "^29.5.1",
+    "@types/semver": "^7.3.13",
     "@types/service-worker-mock": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-typescript": "^3.0.0",
-    "jest": "^27.0.1",
-    "prettier": "^2.3.0",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.8",
     "service-worker-mock": "^2.0.5",
-    "ts-jest": "^27.0.1",
-    "ts-loader": "^9.2.2",
-    "typescript": "^4.9.5",
-    "webpack": "^5.38.1",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.4",
+    "webpack": "^5.80.0",
     "webpack-cli": "^4.7.0",
-    "wrangler": "^2.6.2"
+    "wrangler": "^2.17.0"
   },
   "dependencies": {
-    "semver": "^7.3.5"
+    "semver": "^7.5.0"
   }
 }
