--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "@types/jest": "^29.5.1",
     "@types/semver": "^7.3.13",
     "@types/service-worker-mock": "^2.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
-    "eslint": "^7.21.0",
+    "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-typescript": "^3.0.0",
     "jest": "^29.5.0",
@@ -36,8 +34,9 @@
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "webpack": "^5.80.0",
-    "webpack-cli": "^4.7.0",
-    "wrangler": "^2.17.0"
+    "webpack-cli": "^5.0.2",
+    "wrangler": "^2.17.0",
+    "util": "^0.12.5"
   },
   "dependencies": {
     "semver": "^7.5.0"
